# labzero-example

./: .env.example  .gitmodules  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  rename.sh  tailwind.config.js  vite.config.js
.devcontainer/: Dockerfile  devcontainer.json  install.sh  install_packages.sh  setup.sh
scripts/: setup_dev.py
src/myapp/: settings.py  urls.py  views.py
src/myapp/fe/js/: main.js
src/myapp/templates/: dashboard.html
src/myapp/templatetags/: vite.py
src/myapp_user/: models.py
src/myapp_user/migrations/: 0001_initial.py
sub-src/myapp_cli/myapp_cli/: __init__.py
templates/: base.html  dashboard.html  index.html  login.html
