[project]
authors = [
    {name = "My Name", email = "myname@myapp.co"},
]
license = {text = "MIT"}
requires-python = ">=3.12,<4.0"
dependencies = [
    "Django<6.0.0,>=4.0.3",
    "click<9.0.0,>=8.1.0",
    "django-environ<1.0.0,>=0.8.1",
    "djangomix<2.0.0,>=1.1.3",
    "sentry-sdk[django]<2.0.0,>=1.29.2",
    "whitenoise<7.0.0,>=6.5.0",
    "gunicorn<22.0.0,>=21.2.0",
    "wagtail<8.0.0,>=5.1.1",
    "django-extensions<5.0.0,>=3.2.3",
    "werkzeug<3.0.0,>=2.3.7",
    "psycopg2>=2.9.10",
    "labzero",
    "django-umin",
]
name = "myapp"
version = "0.0.0"
description = "Some description"

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.1.1",
    "django-extensions<5.0.0,>=3.1.5",
    "django-debug-toolbar<5.0.0,>=3.2.4",
    "pytest-djangoapp<1.0.0,>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
django-umin = { workspace = true, editable = true }
labzero = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "ext-src/django-umin",
    "ext-src/labzero",
]
